// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/sbt/extract extractPackageFile() extracts deps for generic use-cases 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "0.0.1",
      "datasource": "sbt",
      "depName": "org.example:foo",
      "fileReplacePosition": 130,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.2",
      "datasource": "sbt",
      "depName": "org.example:bar_2.12",
      "fileReplacePosition": 186,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.3",
      "datasource": "sbt",
      "depName": "org.example:baz_2.12",
      "fileReplacePosition": 250,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.4",
      "datasource": "sbt",
      "depName": "org.example:qux",
      "fileReplacePosition": 285,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.5",
      "datasource": "sbt",
      "depName": "org.example:quux",
      "fileReplacePosition": 344,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.6",
      "datasource": "sbt",
      "depName": "org.example:quuz_2.12",
      "depType": "test",
      "fileReplacePosition": 519,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.7",
      "datasource": "sbt",
      "depName": "org.example:corge",
      "depType": "Provided",
      "fileReplacePosition": 577,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.8",
      "datasource": "sbt",
      "depName": "org.example:grault",
      "depType": "Test",
      "fileReplacePosition": 472,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.9",
      "datasource": "sbt",
      "depName": "org.example:waldo",
      "depType": "plugin",
      "fileReplacePosition": 979,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
  ],
}
`;

exports[`lib/manager/sbt/extract extractPackageFile() extracts deps when scala version is defined in a variable 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "0.0.1",
      "datasource": "sbt",
      "depName": "org.example:foo",
      "fileReplacePosition": 192,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.2",
      "datasource": "sbt",
      "depName": "org.example:bar_2.12",
      "fileReplacePosition": 248,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.3",
      "datasource": "sbt",
      "depName": "org.example:baz_2.12",
      "fileReplacePosition": 312,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.4",
      "datasource": "sbt",
      "depName": "org.example:qux",
      "fileReplacePosition": 347,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.5",
      "datasource": "sbt",
      "depName": "org.example:quux",
      "fileReplacePosition": 406,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.6",
      "datasource": "sbt",
      "depName": "org.example:quuz_2.12",
      "depType": "test",
      "fileReplacePosition": 550,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.7",
      "datasource": "sbt",
      "depName": "org.example:corge",
      "depType": "Provided",
      "fileReplacePosition": 608,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.8",
      "datasource": "sbt",
      "depName": "org.example:grault",
      "depType": "Test",
      "fileReplacePosition": 48,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.9",
      "datasource": "sbt",
      "depName": "org.example:waldo",
      "depType": "plugin",
      "fileReplacePosition": 1010,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
  ],
}
`;

exports[`lib/manager/sbt/extract extractPackageFile() skips deps when scala version is missing 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "3.0.0",
      "datasource": "sbt",
      "depName": "org.scalatest:scalatest",
      "fileReplacePosition": 65,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
      ],
    },
    Object {
      "currentValue": "1.0.11",
      "datasource": "sbt",
      "depName": "com.github.gseitz:sbt-release",
      "depType": "plugin",
      "fileReplacePosition": 100,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
}
`;
